# GEOSX

./: .travis.yml
examples/tests_quan/hi24l/hi24l_co2_wells_large_with_rate_control_heterogeneous/: hi24l_co2_wells.xml  launch_hi24l_co2_wells  permXY.geos  permZ.geos  poro.geos
examples/tests_quan/hi24l/hi24l_single_phase_hybrid_large_heterogeneous/: hi24l_singlephase_bc_large_heterogeneous.xml  (+2 more)
host-configs/LLNL/: lassen-base.cmake  quartz-base.cmake
src/: CMakeLists.txt
src/cmake/: GeosxOptions.cmake
src/coreComponents/codingUtilities/: StringUtilities.cpp  StringUtilities.hpp
src/coreComponents/common/: DataTypes.hpp  GeosxConfig.hpp.in
src/coreComponents/constitutive/: CMakeLists.txt  ConstitutivePassThru.hpp
src/coreComponents/fileIO/: CMakeLists.txt
src/coreComponents/fileIO/vtk/: CMakeLists.txt  VTKPolyDataWriterInterface.cpp  VTKPolyDataWriterInterface.hpp
src/coreComponents/fileIO/vtk/unitTests/: testVTK.cpp
src/coreComponents/finiteVolume/: FluxApproximationBase.cpp  FluxApproximationBase.hpp  TwoPointFluxApproximation.cpp
src/coreComponents/linearAlgebra/: CMakeLists.txt
src/coreComponents/mesh/: CellBlock.hpp  CellElementRegion.hpp  CellElementSubRegion.hpp  ElementRegionBase.hpp  ElementRegionManager.hpp  ElementSubRegionBase.hpp  EmbeddedSurfaceSubRegion.hpp  FaceElementSubRegion.hpp  NodeManager.hpp  SurfaceElementRegion.hpp  SurfaceElementSubRegion.hpp  WellElementRegion.hpp  WellElementSubRegion.hpp
src/coreComponents/physicsSolvers/: LinearSolverParameters.cpp  LinearSolverParameters.hpp
src/docs/doxygen/: GeosxConfig.hpp
(+29 files in other folders)
